...
        android:layout_alignParentTop="true"
        android:src="@drawable/virtual_card_enrollment_illustration"
        android:layout_centerHorizontal="true"
        android:importantForAccessibility="no" />

    <androidx.appcompat.widget.DialogTitle
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/secure_illustration_view"
        android:layout_marginTop="@dimen/virtual_card_enrollment_dialog_title_margin_top"
        tools:text="Make it more secure with a virtual card?"
        android:textAppearance="@style/TextAppearance.AlertDialogTitleStyle" />
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/virtual_card_education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.TextLarge.Secondary"
                tools:text="A virtual card disguises your actual card to help protect you from potential fraud. Learn about virtual cards" />

            <TextView
...
