...
      android:text="@string/access_loss_export_dialog_message"
      android:textAppearance="@style/TextAppearance.TextMedium.Secondary" />
  <RelativeLayout android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp">
    <org.chromium.ui.widget.ButtonCompat
        android:id="@+id/positive_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/access_loss_export_dialog_positive_button_text"
        style="@style/FilledButton" />
    <org.chromium.ui.widget.ButtonCompat
...
